small change to tex text

--- a/latex/before_body.tex
+++ b/latex/before_body.tex
@@ -8,7 +8,7 @@
 \begin{center}
 To our families,
 
-who still think we fix printers and broken WiFi...
+who still think we fix printers and broken WiFi.
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
