Update file to allow compilation

--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -105,7 +105,7 @@ And to do the tests in a `puppeteer` spirit, you can refer to the `{crrry}` pack
 
 Here is an example:
 
-```{r}
+```{r, eval=FALSE}
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -125,7 +125,7 @@ You can then call one of the `test` object methods:
 
 Of course, the interesting part is when you are doing "bulk testing" of your application, for example by setting a series of values to an input:
 
-```{r}
+```{r, eval=FALSE}
 for (i in letters[1:5]){
   test$shiny_set_input(
     "main_ui_1-left_ui_1-pkg_name_ui_1-package", 
@@ -136,7 +136,7 @@ for (i in letters[1:5]){
 
 And once your test is done, do not forget to close the connection!
 
-```{r}
+```{r, eval=FALSE}
 test$stop()
 ```
 
@@ -159,7 +159,7 @@ And if you want to scale this, you can also combine it with `{shinyloadtest}`: l
 
 If you are using `{crrry}`, this `gremlins` test comes for free: 
 
-```{r}
+```{r, eval=FALSE}
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -391,7 +391,7 @@ If you need a deeper look into the connection between application actions and th
 
 Let's say I want to record the computation of the `hexmake` container containing the same app as before. 
 
-```{r}
+```{r, eval=FALSE}
 system(
   "docker run -p 2708:80 --rm --name hexmake2 -d colinfay/hexmake", 
   wait = FALSE
@@ -425,7 +425,7 @@ system("docker kill hexmake2")
 
 And let's now draw a small graph of this evolution: 
 
-```{r}
+```{r, eval=FALSE}
 library(dplyr, warn.conflicts = FALSE)
 results <- results %>% 
   mutate(
