--- a/index.Rmd
+++ b/index.Rmd
@@ -135,7 +135,7 @@ right_link <- function(text, link){
     )
   )
 }
-right_align<- function(text, link){
+right_align <- function(text, link){
   htmltools::tagList(
     htmltools::singleton(
       htmltools::tags$style(
@@ -178,3 +178,18 @@ knitr::write_bib(c(
 try(file.copy("packages.bib", "docs/packages.bib"))
 try(file.copy("packages.bib", "docs/wip/packages.bib"))
 ```
+
+
+
+```{r}
+right_align("Test")
+
+a <- 12
+```
+
+`r print(a)`
+
+`r message(ls())`
+
+`r print(ls()) ; right_align("Test 2")`
+
