Reading of 12-step-by-step-secure.Rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -99,7 +99,7 @@ Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-
 
 ## Software information and conventions {-}
 
-I used the **knitr**\index{knitr} package [@xie2015] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. My R session information is shown below:
+I used the **knitr**\index{knitr} package [@R-knitr] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. My R session information is shown below:
 
 ```{r}
 xfun::session_info()
@@ -172,9 +172,11 @@ if (!requireNamespace("cloc")){
 
 ```{r index-3, include=FALSE}
 # automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
+knitr::write_bib(unique(c(
+  .packages(), 'bookdown', 'knitr', 'rmarkdown',
+  'testthat', 'chromote',
+  attachment::att_from_description()
+)), 'packages.bib')
 try(file.copy("packages.bib", "docs/packages.bib"))
 try(file.copy("packages.bib", "docs/wip/packages.bib"))
 ```
