fig align center and ref

--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,8 @@ graphics: yes
 ```{r index-1, include = FALSE}
 knitr::opts_chunk$set( 
   comment = "", 
-  cache = FALSE
+  cache = FALSE,
+  fig.align = "center"
 )
 
 options(
@@ -174,7 +175,7 @@ if (!requireNamespace("cloc")){
 # automatically create a bib database for R packages
 knitr::write_bib(unique(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown',
-  'testthat', 'chromote',
+  'testthat', 'chromote', 'crrri',
   attachment::att_from_description()
 )), 'packages.bib')
 try(file.copy("packages.bib", "docs/packages.bib"))
