you've -> you have & chunk renaming

--- a/09-step-by-step-prototype.Rmd
+++ b/09-step-by-step-prototype.Rmd
@@ -22,7 +22,7 @@ If you want to do it through command line, you can use:
 golem::create_golem(path = "path/to/package")
 ```
 
-Once you've got that, a new project will be launched. 
+Once you have got that, a new project will be launched. 
 Here is the structure of this project:
 
 ```{r 09-step-by-step-prototype-2, echo=FALSE}
@@ -65,7 +65,7 @@ In this part, we will go through the `dev/01_start.R` and `dev/02_dev.R` scripts
 
 ## Setting things up with `dev/01_start.R`
 
-Once you've created your project, the first file that opens is `dev/01_start.R`. 
+Once you have created your project, the first file that opens is `dev/01_start.R`. 
 This file contains a series of commands to run once, at the start of the project. 
 These are the commands you will be using at 
 
@@ -181,24 +181,24 @@ golem::add_js_file("script", here::here("golex"), open = FALSE)
 
 Will generate the following file:
 
-```{r, comment="", echo=FALSE}
+```{r 09-step-by-step-prototype-15, comment="", echo=FALSE}
 readLines("golex/inst/app/www/script.js") %>% 
   cat(sep = "\n")
 ```
 
 Here, you will have an infrastructure for launching JavaScript code once the application is ready (this code is standard `jQuery` format: we will be back to JavaScript at the end of this book).
 
-```{r 09-step-by-step-prototype-15, eval = FALSE}
+```{r 09-step-by-step-prototype-16, eval = FALSE}
 golem::add_js_handler( "handlers" )
 ```
 
-```{r 09-step-by-step-prototype-16, include = FALSE}
+```{r 09-step-by-step-prototype-17, include = FALSE}
 golem::add_js_handler("handlers", here::here("golex"), open = FALSE)
 ```
 
 Will generate the following file:
 
-```{r, comment="", echo=FALSE}
+```{r 09-step-by-step-prototype-18, comment="", echo=FALSE}
 readLines( "golex/inst/app/www/handlers.js" ) %>% 
   cat(sep = "\n")
 ```
@@ -206,11 +206,11 @@ readLines( "golex/inst/app/www/handlers.js" ) %>%
 As you can see, there is already a skeleton for building Shiny JavaScript handlers. 
 More on that structure in the last chapter of the book!
 
-```{r 09-step-by-step-prototype-17, eval = FALSE}
+```{r 09-step-by-step-prototype-19, eval = FALSE}
 golem::add_css_file( "custom" )
 ```
 
-```{r 09-step-by-step-prototype-18, include = FALSE}
+```{r 09-step-by-step-prototype-20, include = FALSE}
 golem::add_css_file("custom", here::here("golex"), open = FALSE)
 ```
 
