--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -59,7 +59,7 @@ Just keep in mind that commits are what allow you to get back in time, so a comm
 
 #### `push`
 
-Once you've get a set of commits ready, you are ready to `push` it to the server. 
+Once you have get a set of commits ready, you are ready to `push` it to the server. 
 In other word, you will permanently record these commits (so the series of changes) to the server. 
 
 Making a push implies two things: 
