--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -12,7 +12,7 @@ At the moment you receive the specifications for your app, it is tempting to rus
 And that is perfectly normal: we're Shiny developer because we love building software, so as soon as a problem emerges, our brain starts thinking about technical implementation, packages, pieces of code, and all these things that we love to do when we are building an app.
 
 But rushing into coding from the very beginning is not the safest way to go. 
-Focusing on technical details from the very beginning can make you miss the big picture, be it for the whole app if you are in charge of the project, or for the piece of the whole app you've been assigned to. 
+Focusing on technical details from the very beginning can make you miss the big picture, be it for the whole app if you are in charge of the project, or for the piece of the whole app you have been assigned to. 
 Have you ever faced a situation in a coding project where you tell yourself "Oh, I wish I had realized this sooner, because now I need to refactor a lot of my code for this specific thing"? 
 Yes, we all have been in this situation: realizing too late that the thing we have implemented does not work with another feature we discover along the road. 
 And what about "Oh I wish I had realized sooner that this package existed before trying to implement my own functions to do that!".
@@ -81,7 +81,7 @@ But beware: too complex maps are also unreadable!
 Before starting to code, the safe call will be to ask your team/client (depending on the project) a series of question just to get a good grasp of the whole project. 
 Here is a (non-exhaustive) list of information you might need along the way. 
 
-Side note: of course, these questions do not cover the core functionalities of the application: I'm pretty sure you've thought about covering this already. 
+Side note: of course, these questions do not cover the core functionalities of the application: I'm pretty sure you have thought about covering this already. 
 These are more contextual questions which are not directly linked to the application itself  
 
 ### About the end users 
