--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 4: Strengthen {-}
 
-```{r include = FALSE}
+```{r 12-step-by-step-secure-1, include = FALSE}
 try({
   system("docker kill hexmake")
   system("docker kill hexmake2")
@@ -105,7 +105,7 @@ And to do the tests in a `puppeteer` spirit, you can refer to the `{crrry}` pack
 
 Here is an example:
 
-```{r}
+```{r 12-step-by-step-secure-2}
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -125,7 +125,7 @@ You can then call one of the `test` object methods:
 
 Of course, the interesting part is when you are doing "bulk testing" of your application, for example by setting a series of values to an input:
 
-```{r}
+```{r 12-step-by-step-secure-3}
 for (i in letters[1:5]){
   test$shiny_set_input(
     "main_ui_1-left_ui_1-pkg_name_ui_1-package", 
@@ -136,7 +136,7 @@ for (i in letters[1:5]){
 
 And once your test is done, do not forget to close the connection!
 
-```{r}
+```{r 12-step-by-step-secure-4}
 test$stop()
 ```
 
@@ -159,7 +159,7 @@ And if you want to scale this, you can also combine it with `{shinyloadtest}`: l
 
 If you are using `{crrry}`, this `gremlins` test comes for free: 
 
-```{r}
+```{r 12-step-by-step-secure-5}
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -180,7 +180,7 @@ This package, created and maintained by RStudio, allows you to do a series of sc
 
 Here is for example how it would work with a `{golem}` based application: 
 
-```{r 12-step-by-step-secure-1, eval = FALSE}
+```{r 12-step-by-step-secure-6, eval = FALSE}
 golem::add_rstudioconnect_file()
 shinytest::recordTest()
 ```
@@ -192,7 +192,7 @@ Using this button, you can take various recording of your shiny application at d
 
 Then, you can do some changes in your app, and run:
 
-```{r 12-step-by-step-secure-2, eval = FALSE}
+```{r 12-step-by-step-secure-7, eval = FALSE}
 shinytest::testApp()
 ```
 
@@ -200,7 +200,7 @@ If the `{shinytest}` package detects a visual change in the application, you wil
 
 ### Testing the app load
 
-```{r 12-step-by-step-secure-3, include=FALSE, error=TRUE}
+```{r 12-step-by-step-secure-8, include=FALSE, error=TRUE}
 try({system("docker rm hexmake")})
 ```
 
@@ -208,14 +208,14 @@ try({system("docker rm hexmake")})
 
 `{shinyloadtest}`, on the other hand, tests how an application behaves when one, two, three, twenty, one hundred users connect to the app, and gives you a visual report about the connection and response time of each session.
 The idea with `{shinyloadtest}` is to first record a session where you mimic a user behavior, then `shinycannon`, a command line tool coming with `{shinyloadtest}`, replays the recording several times. 
-Once the session has been replayed several times mimicking the session you've recorded, you have access to a report of the behavior of your app. 
+Once the session has been replayed several times mimicking the session you have recorded, you have access to a report of the behavior of your app. 
 
 
-```{r 12-step-by-step-secure-4 }
+```{r 12-step-by-step-secure-9 }
 library(shinyloadtest)
 ```
 
-```{r 12-step-by-step-secure-5, eval = FALSE}
+```{r 12-step-by-step-secure-10, eval = FALSE}
 # Starting your app in another process
 p <- processx::process$new(
   "Rscript", c("-e", "options('shiny.port'= 2811);hexmake::run_app()")
@@ -228,7 +228,7 @@ browseURL("http:://localhost:2811")
 
 Record the tests, potentially in a new dir: 
 
-```{r 12-step-by-step-secure-6, eval = FALSE}
+```{r 12-step-by-step-secure-11, eval = FALSE}
 fs::dir_create("shinylogs")
 withr::with_dir(
   "shinylogs", {
@@ -242,25 +242,25 @@ We now have a series of one or more recording(s) inside the `shinylogs/` folder:
 Then, let's switch to our command line, and rerun the session with `shinycannon`. 
 The `shinycannon` command line tools take several argument: the path the `.log` file, the URL of the app, `--workers` specify the number of concurrent connections to run, and the `--output-dir` argument specifies where the report should be written. 
 
-```{bash 12-step-by-step-secure-7, eval = FALSE}
+```{bash 12-step-by-step-secure-12, eval = FALSE}
 shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run1
 ```
 
 And now, we have new files inside the folder, corresponding to the session recordings. 
 
-```{r 12-step-by-step-secure-8 }
+```{r 12-step-by-step-secure-13 }
 fs::dir_tree("shinylogs", recurse = FALSE)
 ```
 
 Good news: we do not have to manually analyze these files—`{shinyloadtest}` offers a series of wrapper functions to do that. 
 
-```{r 12-step-by-step-secure-9, message = FALSE}
+```{r 12-step-by-step-secure-14, message = FALSE}
 shinyload_runs <- shinyloadtest::load_runs("5 workers" = "shinylogs/run1")
 ```
 
 We now have a data.frame with 
 
-```{r 12-step-by-step-secure-10 }
+```{r 12-step-by-step-secure-15 }
 dplyr::glimpse(shinyload_runs)
 ```
 
@@ -269,19 +269,19 @@ Here are some examples:
 
 + `slt_session_duration()` plots the session duration, with the various types of event that takes computation time: JS and CSS load, R computation... 
 
-```{r 12-step-by-step-secure-11 }
+```{r 12-step-by-step-secure-16 }
 slt_session_duration(shinyload_runs)
 ```
 
 + `slt_waterfall()` plots the waterfall graph of session durations, ordered by events. 
 
-```{r 12-step-by-step-secure-12 }
+```{r 12-step-by-step-secure-17 }
 slt_waterfall(shinyload_runs)
 ```
 
 And if you need to bundle everything into an HTML reports, `shinyloadtest_report()` is what you are looking for. 
 
-```{r 12-step-by-step-secure-13, eval = FALSE}
+```{r 12-step-by-step-secure-18, eval = FALSE}
 shinyloadtest_report(shinyload_runs)
 ```
 
@@ -312,39 +312,39 @@ That's where `{dockerstats}` can come into play: this package is a wrapper aroun
 
 You can get the `{dockerstats}` package from GitHub with:
 
-```{r 12-step-by-step-secure-14, eval = FALSE}
+```{r 12-step-by-step-secure-19, eval = FALSE}
 remotes::install_github("ColinFay/dockerstats")
 ```
 
 With these stats, we can monitor the load on the app when it is run in a docker container. 
 
-```{r 12-step-by-step-secure-15, echo = FALSE, error = TRUE}
+```{r 12-step-by-step-secure-20, echo = FALSE, error = TRUE}
 try({system("docker rm hexmake")})
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 Sys.sleep(5)
 ```
 
-```{r 12-step-by-step-secure-16, eval = FALSE}
+```{r 12-step-by-step-secure-21, eval = FALSE}
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 ```
 
 Let's say now we want the stats for the hexmake container:
 
-```{r 12-step-by-step-secure-17 }
+```{r 12-step-by-step-secure-22 }
 dockerstats::dockerstats("hexmake")
 ```
 
 Of course, right now we are not using the app, so the usage can be pretty small. 
 But let's push it a little bit an mimic a lot of connexions: to do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
 
-```{bash 12-step-by-step-secure-18, eval = FALSE}
+```{bash 12-step-by-step-secure-23, eval = FALSE}
 shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run2
 ```
 
 And let's launch at the same time a `dockerstats_recurse()`
 For example, here, we will be printing, on each loop, the `MemUsage` of the container, then saving the data inside a `dockerstats.csv` file. 
 
-```{r 12-step-by-step-secure-19, eval = FALSE}
+```{r 12-step-by-step-secure-24, eval = FALSE}
 dockerstats_recurse(
   "hexmake",
   callback = function(res){
@@ -370,7 +370,7 @@ Here is what both these processes look side to side:
 As you can see, as the number of connections grow, the memory usage grows. 
 And we now have a csv with the evolution of the `docker stats` records over time!
 
-```{r 12-step-by-step-secure-20 }
+```{r 12-step-by-step-secure-25 }
 docker_stats <- readr::read_csv(
   "shinylogs/dockerstats.csv", 
   col_names = names(
@@ -379,11 +379,11 @@ docker_stats <- readr::read_csv(
 )
 ```
 
-```{r 12-step-by-step-secure-21 }
+```{r 12-step-by-step-secure-26 }
 dplyr::glimpse(docker_stats)
 ```
 
-```{r 12-step-by-step-secure-22, include=FALSE}
+```{r 12-step-by-step-secure-27, include=FALSE}
 try({system("docker kill hexmake")})
 ```
 
@@ -391,7 +391,7 @@ If you need a deeper look into the connection between application actions and th
 
 Let's say I want to record the computation of the `hexmake` container containing the same app as before. 
 
-```{r}
+```{r 12-step-by-step-secure-28}
 system(
   "docker run -p 2708:80 --rm --name hexmake2 -d colinfay/hexmake", 
   wait = FALSE
@@ -425,7 +425,7 @@ system("docker kill hexmake2")
 
 And let's now draw a small graph of this evolution: 
 
-```{r}
+```{r 12-step-by-step-secure-29}
 library(dplyr, warn.conflicts = FALSE)
 results <- results %>% 
   mutate(
@@ -516,7 +516,7 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 
 The first thing to do with `{renv}` is initiating it with the `init()` function. 
 
-```{r 12-step-by-step-secure-24, eval = FALSE}
+```{r 12-step-by-step-secure-30, eval = FALSE}
 renv::init()
 ```
 
@@ -529,13 +529,13 @@ The fastest way to install new packages is by using the `install.packages` funct
 This shim will search into the local cache to see if the package has already been cached.
 
 
-```{r 12-step-by-step-secure-27, eval = FALSE}
+```{r 12-step-by-step-secure-31, eval = FALSE}
 install.packages("dplyr")
 ```
 
 Once you want to update your `{renv}` `Lockfile`, call `snapshot()`
 
-```{r 12-step-by-step-secure-29, eval = FALSE}
+```{r 12-step-by-step-secure-32, eval = FALSE}
 renv::snapshot()
 ```
 
@@ -587,7 +587,7 @@ Let's take some time to understand what this file contains, or how we could be b
 
 1. `FROM`
 
-```{r 12-step-by-step-secure-31, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-33, echo = FALSE, comment=""}
 readLines("Dockerfile")[1] %>% 
   glue::as_glue()
 ```
@@ -596,7 +596,7 @@ This line defines what version of R to use for deploying your application.
 This `FROM` line is the one that sets an image to start from: you rarely (if ever) build a Docker image from nothing, but instead you use an existing image on top of which you build your own image.
 Here, we choose one of the [r-ver](https://hub.docker.com/r/rocker/r-ver/) docker images, based on the output of:
 
-```{r 12-step-by-step-secure-32, comment=""}
+```{r 12-step-by-step-secure-34, comment=""}
 R.Version()$version.string
 ```
 
@@ -605,21 +605,21 @@ R.Version()$version.string
 The `RUN` calls in the file refers to bash calls we are making to build the image. 
 For example, the second line of the `Dockerfile` installs all the system requirements needed by our application.
 
-```{r 12-step-by-step-secure-33, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-35, echo = FALSE, comment=""}
 readLines("Dockerfile")[2] %>% 
   glue::as_glue()
 ```
 
 In the subsequent `RUN` calls, we are using `remotes::install_version()` to be sure we install the version that matches the one from your machine. 
 
-```{r 12-step-by-step-secure-34, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-36, echo = FALSE, comment=""}
 readLines("Dockerfile")[6] %>% 
   glue::as_glue()
 ```
 
 As you can see, it matches the local version: 
 
-```{r 12-step-by-step-secure-35, comment=""}
+```{r 12-step-by-step-secure-37, comment=""}
 packageVersion("config")
 ```
 
@@ -628,7 +628,7 @@ packageVersion("config")
 This Docker entry takes a folder or a file, and copies it inside the image. 
 With `{golem}`, we are adding the current project, containing the app, to a folder called `/build_zone`. 
 
-```{r 12-step-by-step-secure-36, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-38, echo = FALSE, comment=""}
 readLines("Dockerfile")[13] %>% 
   glue::as_glue()
 ```
@@ -637,7 +637,7 @@ readLines("Dockerfile")[13] %>%
 
 This command defines which port of the container will be available from the outside of the container.
 
-```{r 12-step-by-step-secure-37, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-39, echo = FALSE, comment=""}
 readLines("Dockerfile")[16] %>% 
   glue::as_glue()
 ```
@@ -647,7 +647,7 @@ readLines("Dockerfile")[16] %>%
 This final command is the one that is launched when you run a container. 
 With a `{shiny}` app, this command is the one that launches the application.  
 
-```{r 12-step-by-step-secure-38, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-40, echo = FALSE, comment=""}
 readLines("Dockerfile")[16] %>% 
   glue::as_glue()
 ```
@@ -657,7 +657,7 @@ readLines("Dockerfile")[16] %>%
 If you want to do everything from the R command line, the `{dockerfiler}` package is here for you! 
 This package allows you to generate a `Dockerfile` straight from R: 
 
-```{r}
+```{r 12-step-by-step-secure-41}
 library(dockerfiler)
 my_dock <- Dockerfile$new()
 my_dock$RUN("apt-get update && apt-get install -y  git-core libcurl4-openssl-dev")
