you've > you have

--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -29,7 +29,7 @@ But both cases have something in common: people will want the app to be usable, 
 If people use your app in a professional context, they do not want to fight with your interface, read complex manuals, or lose time understanding what they are supposed to do and how they are supposed to use your application. 
 In other words, they want an efficient tool: something that, beyond being accurate, is easy to grasp.
 In a professional context, when it comes to "Business applications", remember that the easier the learning curve the better the user experience.
-Think about all the professional applications and softwares that you've been ranting about during your professional life, all these cranky user interfaces you have not understand and/or you need to relearn every time you use them. 
+Think about all the professional applications and softwares that you have been ranting about during your professional life, all these cranky user interfaces you have not understand and/or you need to relearn every time you use them. 
 You do not want your app to be one of these applications. 
 
 And on the other end, if users open your app for fun, they are not going to fight your app into submission: they are just going to give up if it is too complex to be used.
